<!--
 Copyright 2020 Google Inc.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name">RunApp</string>
    <string name="welcome_text">Welcome To RunApp!</string>
    <string name="get_started">Get Started</string>
    <string name="todo">TODO</string>
    <string name="running_timer">Running Timer</string>
    <string name="timer_display">00:00:00</string>
    <string name="timer_units">min \t\t\t\t sec \t\t\t\t deci</string>
    <string name="timer_start">Start</string>
    <string name="timer_reset">Reset</string>
</resources>
